double posts issue when click cycling Blog hyperlink next to rssicon.svg

--- a/blog/_includes/header.html
+++ b/blog/_includes/header.html
@@ -10,8 +10,8 @@
         <!-- <label for="nav-trigger">
           <span class="menu-icon fas fa-bars fa-lg"></span>
         </label> -->
-        <a href="#" class="menu-icon">
-          <a href="/about" class="nav-trigger">About</a>
+        <!-- <a href="#" class="menu-icon"> -->
+        <a href="/about" class="nav-trigger">About</a>
           <!-- <a href="/photons" class="nav-trigger">Photons</a>
           <a href="/archive" class="nav-trigger">Archive</a> -->
         </a>
